--- a/HTML-CSS mundo3/Projeto_cordel/cordel.css
+++ b/HTML-CSS mundo3/Projeto_cordel/cordel.css
@@ -1,1 +1,128 @@
 @charset "UTF-8";
+
+* {
+    padding: 0px;
+    margin: 0px;
+}
+
+
+
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgray;
+}
+
+
+
+header {
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+
+header > h1 {
+    padding-top: 50px;
+    font-variant: small-caps; /*Deixando todas as letras maiúsculas*/
+
+}
+
+header > p {
+    padding-bottom: 50px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bolder;
+}
+
+a:hover {
+    color: aqua;
+    text-decoration: underline;
+}
+
+
+
+section {
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+    line-height: 2em;
+    padding-left: 30px;
+}
+
+
+.normal {
+    background-color: white;
+
+}
+
+.image {
+    background-color: rgb(66, 66, 66);
+    color: white;
+}
+
+
+.image > p {
+    background-color: rgba(0, 0, 0, 0.342);
+    width: 180px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+footer {
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
