--- a/HTML-CSS mundo3/Projeto_cordel/cordel.css
+++ b/HTML-CSS mundo3/Projeto_cordel/cordel.css
@@ -5,6 +5,7 @@
     margin: 0px;
 }
 
+
 html, body {
     min-height: 100vh;
     background-color: darkgray;
@@ -48,7 +49,14 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-size: 25px;
+    font-weight: bolder;
     font-family: 'Times New Roman', Times, serif;
+}
+
+
+section > p {
+    padding-bottom: 2em;
 }
 
 
@@ -60,16 +68,31 @@ section {
 .image {
     background-color: rgb(66, 66, 66);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.452);
+    background-size: cover;
+    background-attachment: fixed;
+
 }
 
 
-.image > p {
-    background-color: rgba(0, 0, 0, 0.342);
-    width: 180px;
+#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+
+}
+
+#img02 {
+    background-image: url(imagens/background002.jpg);
+
+}
+
+.image p {
+    background-color: rgba(0, 0, 0, 0.767);
+    width: 400px;
     padding: 10px;
     border-radius: 10px;
+    text-shadow: 2px 3.5px 0px  black;
 }
-
 
 
 
