--- a/HTML-CSS mundo4/MF/estilos/media-query.css
+++ b/HTML-CSS mundo4/MF/estilos/media-query.css
@@ -2,6 +2,78 @@
 
 /* Todas as demais mídias */
 
+/* Typical Device Breakpoints
+------------------------------
+Medidas
+    Pequenas telas: até 600px
+
+    Celular: 600px até 768px
+
+    Tablet: 769px até 992px
+
+    Desktop: 993px até 1200px
+
+    Grandes telas acima de 1200px
+*/
+
+/* Impressão */
 @media print {
-    
+    * {
+        font-family: 'Courier New', Courier, monospace;
+    }
+
+    main {
+        border: 2px solid black;
+    }
+
+    main h1 {
+        text-shadow: none;
+        color: black;
+    }
+
+    body {
+        background-image: url(../img/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: block;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/* Tablet */
+@media screen and (min-width: 769px) and (max-width: 992px) {
+    body {
+        background-image: url(../img/back-tablet.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: block;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: none;}
+}
+
+/* Desktop */
+@media screen and (min-width: 993px) and (max-width: 1200px) {
+    body {
+        background-image: url(../img/back-pc.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: block;}
+    img#tv {display: none;}
+
+}
+
+/* Grandes telas */
+@media screen and (min-width: 1201px) {
+    body {
+        background-image: url(../img/back-tv.jpg);
+    }
+    img#phone {display: none;}
+    img#tablet {display: none;}
+    img#print {display: none;}
+    img#pc {display: none;}
+    img#tv {display: block;}
 }
